2010-06-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Implement Find in Files file pattern search.
 * src/search.c:
   Add file pattern to combo box history.


2010-06-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Add Files checkbox and combo to Find in Files dialog, currently
   does nothing & is disabled.
   Don't try to focus the next entry on pressing tab anymore as this
   is more complicated now.


2010-06-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Put Find in Files Search field above Directory field.
 * src/search.c, doc/geany.txt:
   Simplify FIF 'Fixed strings, Grep regular expressions, Extended
   regular expressions' radio buttons with a 'Use regular expressions'
   checkbox. This uses the extended syntax (which is the same as the
   Find/Replace regex syntax).
 * src/search.c:
   Move 2 Find in Files checkboxes for even spacing.


2010-06-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tagmanager/tm_work_object.c:
   Change of description of tm_get_real_path(). Patch by Dimitar Zhekov.
   Thanks.


2010-06-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/dialogs.c, src/plugindata.h, src/search.c,
   src/plugins.c, src/ui_utils.c, plugins/geanyfunctions.h:
   Add ui_combo_box_add_to_history() to API.
 * plugins/filebrowser.c:
   Add history to path entry.
 * src/plugindata.h, src/plugins.c, doc/plugins.dox:
   Fix not loading plugins built against a newer API when Geany doesn't
   provide the required version given in PLUGIN_VERSION_CHECK().
   Improve documentation for PLUGIN_VERSION_CHECK().
 * plugins/filebrowser.c:
   Allow Find in Files when no items are selected.
 * src/build.c, src/geanyobject.c, src/geanyobject.h, doc/plugins.dox:
   Add API signal "build-start" (patch by Jiří Techet, thanks).

